--- a/secret.yaml
+++ b/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: avp-secret
   namespace: test
   annotations:
-    avp.kubernetes.io/path: "secret/hello"
+    avp.kubernetes.io/path: "secret/data/hello"
 type: Opaque
 stringData:
   sample-secret: <foo>
