--- a/secret.yaml
+++ b/secret.yaml
@@ -4,6 +4,8 @@ metadata:
   name: avp-secret
   namespace: test
   annotations:
-    avp.kubernetes.io/path: "secret/data/hello/*"
+    avp.kubernetes.io/path: "secret/data/hello"
 type: Opaque
-stringData: {}
+stringData:
+  - admin
+  - foo
