--- a/secret.yaml
+++ b/secret.yaml
@@ -6,5 +6,5 @@ metadata:
   annotations:
     avp.kubernetes.io/path: "secret/data/hello"
 stringData:
-  - admin
-  - foo
+  admin: <admin>
+  foo: <foo>
